--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lint:fix": "eslint . --ignore-path .eslintignore --ext .ts --fix"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.3",
     "@types/bcrypt": "^5.0.1",
     "@types/cors": "^2.8.14",
     "@types/eslint": "^8.44.4",
@@ -27,7 +26,6 @@
     "@types/lodash": "^4.14.200",
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.4",
-    "@types/node-cron": "^3.0.10",
     "@types/pg": "^8.10.5",
     "@types/swagger-jsdoc": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.5",
@@ -40,22 +38,20 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.4.1",
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.2",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
-    "sleep-promise": "^9.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.11",
