Send email after customer pay the book

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/lodash": "^4.14.200",
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.4",
+    "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.10.5",
     "@types/swagger-jsdoc": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.5",
@@ -44,11 +45,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.4.1",
+    "googleapis": "^129.0.0",
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
