--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           username: root
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd circle-server
+            cd nibiru-digital-book-server
             git pull origin main
             docker-compose down
             docker-compose up --build -d
