--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
           script: |
             cd nibiru-digital-book-server
             git pull origin main
-            docker-compose down
+            docker-compose down --remove-orphans
             docker-compose up --build -d
